--- a/src/styles/documentPage.scss
+++ b/src/styles/documentPage.scss
@@ -108,6 +108,29 @@
       }
 }
 
+// Страница редактирования 
 
+.a4-container {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
 
-  
+.a4-page {
+  width: 300mm;
+  min-height: 297mm;
+  padding: 20mm;
+  background: white;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  margin: 0 auto;
+}
+
+.editable-doc {
+  width: 100%;
+  height: 250mm;
+  border: none;
+  resize: none;
+  font-family: 'Cambria', serif;
+  font-size: 11pt;
+  line-height: 1.08;
+}
