--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -611,6 +611,23 @@ h2, h3 {
   opacity: 0.6;
 }
 
+textarea {
+  margin: clamp(0.3125rem, 0.2328431373rem + 0.3267973856vw, 0.625rem);
+  font-size: clamp(0.75rem, 0.5588235294rem + 0.7843137255vw, 1.5rem);
+  width: clamp(14.625rem, 10.8970588235rem + 15.2941176471vw, 29.25rem);
+  height: clamp(3.75rem, 2.7941176471rem + 3.9215686275vw, 7.5rem);
+  border-radius: clamp(0.3125rem, 0.2328431373rem + 0.3267973856vw, 0.625rem);
+}
+
+.text-areas {
+  display: flex;
+  justify-content: center;
+}
+
+.big-placeholder::placeholder {
+  font-size: clamp(0.5625rem, 0.4191176471rem + 0.5882352941vw, 1.125rem);
+}
+
 .form {
   position: relative;
   display: flex;
@@ -861,6 +878,15 @@ h2, h3 {
   scrollbar-width: thin;
   scrollbar-color: #888 #f5f5f5;
 }
+.document-data-form .form-firm {
+  display: flex;
+}
+.document-data-form .form-firm input {
+  width: clamp(12.5rem, 7.7205882353rem + 19.6078431373vw, 31.25rem);
+}
+.document-data-form .form-firm div {
+  flex: 1;
+}
 @media (width <= 48.06125rem) {
   .document-data-form {
     margin-bottom: 3.125rem;
@@ -1088,7 +1114,40 @@ h2, h3 {
   width: clamp(8.75rem, 6.5196078431rem + 9.1503267974vw, 17.5rem);
 }
 
-/* Стили для календаря периодов */
+#two-form-section {
+  display: flex;
+  justify-content: space-around;
+}
+#two-form-section div {
+  flex: 1;
+}
+#two-form-section input {
+  width: clamp(11.875rem, 8.8480392157rem + 12.4183006536vw, 23.75rem);
+}
+
+#grid-template10 {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* Два равных столбца */
+  grid-template-rows: auto auto; /* Две строки */
+}
+#grid-template10 div:first-of-type {
+  margin-left: clamp(0.375rem, 0.2794117647rem + 0.3921568627vw, 0.75rem);
+  grid-column: 1; /* Первый столбец */
+  grid-row: 1; /* Первая строка */
+}
+#grid-template10 div:last-of-type {
+  margin-left: clamp(0.375rem, 0.2794117647rem + 0.3921568627vw, 0.75rem);
+  grid-column: 1; /* Первый столбец */
+  grid-row: 2; /* Первая строка */
+}
+#grid-template10 div:last-of-type select {
+  margin-left: clamp(0.375rem, 0.2794117647rem + 0.3921568627vw, 0.75rem);
+}
+#grid-template10 textarea {
+  grid-column: 2; /* Второй столбец */
+  grid-row: 1/span 2; /* Занимает обе строки */
+}
+
 .input, .btn {
   width: clamp(16rem, 11.9215686275rem + 16.7320261438vw, 32rem);
   height: clamp(2rem, 1.4901960784rem + 2.091503268vw, 4rem);
