--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -615,10 +615,6 @@ textarea {
   justify-content: center;
 }
 
-.big-placeholder::placeholder {
-  font-size: clamp(0.5625rem, 0.4191176471rem + 0.5882352941vw, 1.125rem);
-}
-
 .form {
   position: relative;
   display: flex;
@@ -965,7 +961,7 @@ textarea {
 }
 #dataForm input {
   margin: clamp(0.375rem, 0.2794117647rem + 0.3921568627vw, 0.75rem) clamp(0.3125rem, 0.2328431373rem + 0.3267973856vw, 0.625rem);
-  font-size: clamp(0.875rem, 0.6519607843rem + 0.9150326797vw, 1.75rem);
+  font-size: clamp(0.75rem, 0.5588235294rem + 0.7843137255vw, 1.5rem);
 }
 #dataForm .contractDate {
   display: flex;
@@ -986,9 +982,50 @@ textarea {
   background: none;
   color: white;
   font-size: clamp(1.5625rem, 1.1642156863rem + 1.6339869281vw, 3.125rem);
+  margin-left: 0;
 }
-#dataForm .array-item div, #dataForm .array-item button {
+#dataForm .array-item div {
   margin-left: clamp(0.9375rem, 0.6985294118rem + 0.9803921569vw, 1.875rem);
+}
+#dataForm .array-ite {
+  display: flex;
+  flex-direction: column;
+  justify-content: center !important;
+  align-items: center;
+  margin-bottom: clamp(0.9375rem, 0.6985294118rem + 0.9803921569vw, 1.875rem);
+}
+#dataForm .array-ite button {
+  background: none;
+  color: white;
+  font-size: clamp(1.5625rem, 1.1642156863rem + 1.6339869281vw, 3.125rem);
+}
+#dataForm .array-ite textarea {
+  margin-top: clamp(2.1875rem, 1.6299019608rem + 2.2875816993vw, 4.375rem) !important;
+}
+#dataForm .array-ite__item {
+  display: flex;
+  margin: 0;
+}
+#dataForm .array-ite__inside-item {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+}
+#dataForm .array-ite__inside-item span {
+  white-space: nowrap;
+  margin: 0 clamp(0.3125rem, 0.2328431373rem + 0.3267973856vw, 0.625rem);
+  align-self: center;
+}
+#dataForm .array-ite__inside-item input {
+  width: clamp(11.75rem, 8.4362745098rem + 13.5947712418vw, 24.75rem);
+}
+#dataForm .array-ite__inside-item select {
+  text-indent: 1.25rem;
+  width: clamp(7rem, 5.2156862745rem + 7.3202614379vw, 14rem);
+  margin: clamp(0.375rem, 0.2794117647rem + 0.3921568627vw, 0.75rem);
+}
+#dataForm .array-ite__inside-item .dropdown-error-message {
+  bottom: clamp(-2.8125rem, -2.0955882353rem + -2.9411764706vw, -5.625rem);
 }
 #dataForm #add-spec {
   font-size: clamp(0.875rem, 0.6519607843rem + 0.9150326797vw, 1.75rem);
@@ -1136,27 +1173,10 @@ textarea {
   width: clamp(11.875rem, 8.8480392157rem + 12.4183006536vw, 23.75rem);
 }
 
-#grid-template10 {
-  display: grid;
-  grid-template-columns: 1fr 1fr; /* Два равных столбца */
-  grid-template-rows: auto auto; /* Две строки */
-}
-#grid-template10 div:first-of-type {
-  margin-left: clamp(0.375rem, 0.2794117647rem + 0.3921568627vw, 0.75rem);
-  grid-column: 1; /* Первый столбец */
-  grid-row: 1; /* Первая строка */
-}
-#grid-template10 div:last-of-type {
-  margin-left: clamp(0.375rem, 0.2794117647rem + 0.3921568627vw, 0.75rem);
-  grid-column: 1; /* Первый столбец */
-  grid-row: 2; /* Первая строка */
-}
-#grid-template10 div:last-of-type select {
-  margin-left: clamp(0.375rem, 0.2794117647rem + 0.3921568627vw, 0.75rem);
-}
-#grid-template10 textarea {
-  grid-column: 2; /* Второй столбец */
-  grid-row: 1/span 2; /* Занимает обе строки */
+.dropdown-container {
+  display: flex;
+  justify-content: end;
+  margin-right: clamp(0.3125rem, 0.2328431373rem + 0.3267973856vw, 0.625rem);
 }
 
 .input-container, .dropdown-container {
@@ -1177,6 +1197,18 @@ textarea {
   bottom: -12px;
   left: 0;
   z-index: 20;
+}
+
+.template-fields input.input, .template-fields .dropdown-menu.data-select {
+  width: clamp(15rem, 11.1764705882rem + 15.6862745098vw, 30rem);
+  height: clamp(1.875rem, 1.3922794118rem + 1.9803921569vw, 3.76875rem);
+  border-radius: clamp(0.5rem, 0.3725490196rem + 0.522875817vw, 1rem);
+}
+
+.dropdown-menu.data-select {
+  font-size: clamp(0.75rem, 0.5588235294rem + 0.7843137255vw, 1.5rem);
+  height: clamp(0.625rem, 0.4656862745rem + 0.6535947712vw, 1.25rem);
+  margin-left: 0;
 }
 
 .input, .btn {
