--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -3,7 +3,7 @@ body {
     height: 100%;
     width: 100vw;
     font-family: var(--font-family-base);
-    @include fluid-text(32, 16);
+    @include fluid-text(32, 10.6);
     letter-spacing: 0.03em;
     font-weight: 100;
     color: var(--color-light);
@@ -44,7 +44,9 @@ body {
                 @include flex-center(false, false);
                 height: 100vh;
                 .navbar {
-
+                    .select-wrapper{
+                        display: flex;
+                    }
                     display: flex;
                     justify-content: end;
                     align-items: center;
@@ -63,13 +65,13 @@ body {
                         }
                         position: relative;
                         overflow: hidden;
-                        width: fluid(81.2, 54.13); // Ширина блока
-                        height: fluid(64, 42.6); // Высота блока
+                        width: fluid(81.2, 40.6); // Ширина блока
+                        height: fluid(64, 32); // Высота блока
                         background-size: 100% 100%; // Растягиваем изображение на весь блок
                         background-position: center; // Центрируем изображение
                         background-repeat: no-repeat; // Запрещаем повторение изображения
                         background-image: url('../assets/login-icon.png');
-                        left: fluid(28, 14);
+                        left: fluid(27, 9);
                         cursor: pointer;
                         background-color: rgba(0,0,0,0);
                         &:hover + &__login-button {  // При наведении на иконку меняем кнопку
@@ -91,7 +93,7 @@ body {
                         // Стили при наведении
                         &:hover {
                             background-color: var(--color-purple);
-                            border-radius: fluid(10, 5);
+                            border-radius: fluid(10, 3.3);
                             color: var(--color-accent); // Яркий цвет при наведении
                             transform: translateX(-50%) scale(1.05); // Легкое увеличение
                         }
@@ -113,13 +115,13 @@ body {
                         background: none;
                         border: none;
                         color: var(--color-light); /* Цвет текста */
-                        @include fluid-text(24,12);
+                        @include fluid-text(24,8);
                         cursor: pointer;
-                        margin: fluid(12, 6) 0;
-                        margin-right: fluid(40, 20);
+                        margin: fluid(12, 4) 0;
+                        margin-right: fluid(40, 13.3);
                         border-radius: 5px;
                         transition: background-color 0.3s;
-                        padding-left: fluid(20, 10);
+                        padding-left: fluid(20, 6.66);
 
                         appearance: none; // Убирает стандартную стрелку
                         -webkit-appearance: none;
@@ -162,7 +164,7 @@ body {
                         }
                     }
                     
-                    gap: fluid(250, -78);
+                    gap: fluid(250, 83.3);
                     max-width: rem(1920);
                     max-height: rem(1080);
                     header, .form {
@@ -175,7 +177,7 @@ body {
                             // Эффект при наведении
                             &:hover {
                                 transform: scale(1.1); // Увеличение размера текста
-                                text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3); // Тень для текста
+                                text-shadow: fluid(2,1) fluid(2,1) fluid(9,3) rgba(0, 0, 0, 0.3); // Тень для текста
 
                                 // Анимация для каждой строки
                                 &::before,
@@ -192,7 +194,7 @@ body {
                                 top: 0;
                                 left: 0;
                                 width: 0;
-                                height: 3px;
+                                height: fluid(3,1);
                                 background-color: var(--color-orange); // Цвет подчеркивания
                                 transition: width 0.5s ease, opacity 0.5s ease;
                                 opacity: 0;
@@ -205,7 +207,7 @@ body {
                                 bottom: 0;
                                 left: 0;
                                 width: 0;
-                                height: 3px;
+                                height: fluid(3,1);
                                 background-color: var(--color-orange); // Цвет подчеркивания
                                 transition: width 0.5s ease, opacity 0.5s ease;
                                 opacity: 0;
@@ -223,13 +225,13 @@ body {
                                     &::marker {
                                         font-size: 0.5em;
                                     }
-                                    @include fluid-text(28,14);
+                                    @include fluid-text(27,9);
 
                                     &:hover {
                                         color: #fff; // Изменение цвета текста
                                         background-color: rgba(223, 134, 39, 0.5);
                                         transform: scale(1.1); // Увеличение размера
-                                        box-shadow: 0 4px 15px var(--color-orange); // Тень
+                                        box-shadow: 0 fluid(4,1.33) fluid(15,5) var(--color-orange); // Тень
                                   
                                         // Подчеркивание
                                         &::after {
@@ -266,29 +268,29 @@ body {
 
 
 h1 {
-    @include fluid-text(64, 32);
+    @include fluid-text(63, 21);
 }
 
 h2 {
-    @include fluid-text(48, 24);
+    @include fluid-text(48, 16);
 
 }
 
 h3 {
-    @include fluid-text(32, 16);
+    @include fluid-text(33, 11);
 }
 
 h2, h3 {
     font-weight: 100;
     font-family: var(--font-family-accent);
-    letter-spacing: fluid(4, 2);
+    letter-spacing: fluid(4, 1.33);
 }
 
 
 .error {
     font-weight: 666;
     color:rgb(255, 0, 0);
-    font-size: fluid(20,10);
+    font-size: fluid(20,6.66);
     text-indent: rem(20);
 }
 
@@ -311,8 +313,8 @@ h2, h3 {
   .modal {
     color:black;
     background: var(--color-light-2);
-    padding: fluid(20, 10);
-    border-radius: fluid(8, 4);
+    padding: fluid(20, 6.66);
+    border-radius: fluid(9, 3);
     max-width: 400px;
     width: 100%;
     box-shadow: 0 fluid(2, 1) fluid(10, 5) rgba(0, 0, 0, 0.1);
@@ -323,12 +325,12 @@ h2, h3 {
   }
   
   .modal-button {
-    margin-top: fluid(15, 7.5);
-    padding: fluid(8, 4) fluid(16, 8);
+    margin-top: fluid(15, 5);
+    padding: fluid(8, 2.66) fluid(16, 5.33);
     background: var(--color-blue);
     color: white;
     border: none;
-    border-radius: fluid(4, 2);
+    border-radius: fluid(4, 1.33);
     cursor: pointer;
   }
   
@@ -339,8 +341,8 @@ h2, h3 {
 }
 
 .back-button {
-    width: fluid(80, 40);
-    height: fluid(80, 40);
+    width: fluid(80, 26.6);
+    height: fluid(80, 26.6);
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -351,10 +353,10 @@ h2, h3 {
       position: absolute;
       left: 50%;
       top: 50%;
-      width: fluid(24, 12);
-      height: fluid(24, 12);
-      border-left: fluid(4, 2) solid white;
-      border-bottom: fluid(4, 2) solid white;
+      width: fluid(24, 8);
+      height: fluid(24, 8);
+      border-left: fluid(4, 1.33) solid white;
+      border-bottom: fluid(4, 1.33) solid white;
       transform: translate(-25%, -50%) rotate(45deg);
     }
     
@@ -368,11 +370,11 @@ h2, h3 {
   }
 
 textarea {
-    margin: fluid(10, 5);
-    @include fluid-text(24, 12);
-    width: fluid(468, 234);
-    height: fluid(120, 60);
-    border-radius: fluid(10, 5);
+    margin: fluid(10, 1.33);
+    @include fluid-text(24, 8);
+    width: fluid(468, 156);
+    height: fluid(120, 40);
+    border-radius: fluid(10, 3.3);
 }
 
 .text-areas {
