--- a/src/styles/documentCreation.scss
+++ b/src/styles/documentCreation.scss
@@ -8,19 +8,22 @@
 
     &__img-notebook {
         top: 0;
-        left: fluid(200, 99);
+        left: fluid(200, 66.6);
     }
 
 
 
     &__buttons {
+        svg {
+            margin: fluid(9,3) fluid(15, 5) 0 0;
+        }
         @include flex-center(false, true);
-        margin-bottom: fluid(100, 50);
+        margin-bottom: fluid(100, 33.3);
         Button {
             background-color: var(--color-light-grey);
             color: black;
-            border-radius: fluid(24,12);
-            @include fluid-text(36,18)
+            border-radius: fluid(24,8);
+            @include fluid-text(36,12)
         }
         Button:hover {
             color: var(--color-light);
@@ -32,12 +35,12 @@
 
     &__decorative-image {
         transform: rotate(180deg);
-        border-radius: fluid(100, 50) fluid(25, 12.5);
+        border-radius: fluid(100, 33.3) fluid(25, 8.3);
         position: relative;
         opacity: 0.9;
         overflow: hidden;
-        width: fluid(600, 300); // Ширина блока
-        height: fluid(290.1, 145); // Высота блока
+        width: fluid(600, 200); // Ширина блока
+        height: fluid(290.1, 96.7); // Высота блока
         background-image: url('../assets/orange-tringle.png');
         background-size: 100% 100%; // Растягиваем изображение на весь блок
         background-position: center; // Центрируем изображение
@@ -45,8 +48,8 @@
       }
 
     &__createDoc {
-        width: fluid(600, 300);
-        height: fluid(775, 387.5);
+        width: fluid(600, 200);
+        height: fluid(768, 256);
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -54,13 +57,14 @@
     }
 
     &__doc-data {
-        height: fluid(400, 200);
+        height: fluid(400, 133.33);
         @include flex-center(false, true);
         .select-wrapper {
             position: relative;
-            width: fluid(512, 256);
-            margin: fluid(10, 5);
-
+            width: fluid(480, 160);
+            margin: fluid(10, 3.3);
+            
+            
           
             &::after {
               content: "▼";
@@ -70,14 +74,16 @@
               transform: translateY(-50%);
               pointer-events: none;
               color: #555;
-              @include fluid-text(20, 10);
+              @include fluid-text(20, 6.66);
             }
           
             select {
+                height: fluid(60, 20);
+                @include fluid-text(27,9);
               text-indent: rem(8);
               width: 100%;
-              padding: fluid(10, 5) fluid(15, 7.5);
-              border-radius: fluid(20, 10);
+              padding: fluid(10, 3.33) fluid(15, 5);
+              border-radius: fluid(20, 6.66);
 
               border: rem(1) solid var(--color-light-grey);
               background-color: var(--color-light-grey);
@@ -116,7 +122,7 @@
 
 #back_and_cont {
     margin: 0;
-    width:  fluid(512, 256);
+    width:  fluid(512, 170.6);
     * {
         background-color: var(--color-orange);
         color: var(--color-light);
@@ -130,11 +136,16 @@
 }
 
 .document-data-form {
-
+    
     .form-firm {
+        @media (max-width: 830px) {
+            flex-direction: column;
+            align-items: center;
+        }
         display: flex;
+        justify-content: center;
         input {
-            width: fluid(500, 200);
+            width: fluid(500, 166.6);
             
         }
         div {
@@ -144,9 +155,8 @@
     }
 
     @include mobile {
-    margin-bottom: rem(50);
-    margin-top: rem(50);
-    overflow-y:hidden;
+    margin-bottom: fluid(50, 16.6);
+    margin-top: fluid(50, 16.6)
 
     }
     margin: 0 fluid(60, 10);
@@ -185,13 +195,13 @@
 }
 
 .form-actions {
-    margin-bottom: fluid(20, 10);
+    margin-bottom: fluid(20, 6.66);
     align-self: center;
     button {
-        @include fluid-text(28, 14);
-        width: fluid(400, 200);
-        height: fluid(52, 26);
-        border-radius: fluid(14, 7);
+        @include fluid-text(28, 9);
+        width: fluid(400, 150);
+        height: fluid(52, 19.5);
+        border-radius: fluid(14, 5.2);
     }
 }
 
@@ -214,53 +224,67 @@
     background: #555;
 }
 
-#data-block, #oneInput{
-    width: 70%;
-    height: 70%;
-    h4 {
-        @include fluid-text(28,14);
-    }
-    @include mobile {
-        justify-content: start;
-    }
-    
-}
-
-#oneInput {
-    width: 30%;
-    height: 70%;
-}
 
 #dataForm {
-    height: 92.5vh;
+    @media (max-width: 830px) {
+        margin-top: rem(64);
+        width: fluid(1000, 315) !important;
+        h4 {
+            text-align: center;
+        }
+        div.form-section {
+            display: flex !important;
+            flex-direction: column;
+            align-items: center;
+        }
+        .section-data {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+    @media (max-width: 1199px) {
+        width: 830px;
+        .document-data-form {
+
+            .form-firm {
+                
+                div {
+                    flex: 0;
+                }
+        
+            }
+      }
+    }
+    
+    height: 91vh;
     border-radius: 0%;
     input {
-        margin: fluid(12, 6) fluid(10, 5);
-        @include fluid-text(24,12);
+        margin: fluid(12, 4) fluid(10, 3.3);
+        @include fluid-text(24,8);
     }
 
     .contractDate {
         display: flex;
         align-items: center;
         input:last-of-type {
-            text-indent: fluid(6,3);
-            width: fluid(260,130);
+            text-indent: fluid(6,2);
+            width: fluid(260,86.6);
         }
         span {
-            margin-left: fluid(14,7);
+            margin-left: fluid(14,5.2);
         }
     }
     .array-item {
-        margin-bottom: fluid(30,15);
+        margin-bottom: fluid(30,10);
         display: flex;
         button {
             background: none;
             color: white;
-            @include fluid-text(50,25);
+            @include fluid-text(50,16.6);
             margin-left: 0 ;
         }
         div {
-            margin-left: fluid(30, 15);
+            margin-left: fluid(30, 10);
         }
         
     }
@@ -269,14 +293,14 @@
         flex-direction: column;
         justify-content: center !important;
         align-items: center;
-        margin-bottom: fluid(30,15);
+        margin-bottom: fluid(30,10);
         button {
-            background: none;
+            background: none;   
             color: white;
-            @include fluid-text(50,25);
+            @include fluid-text(50,16.6);
         }
         textarea {
-            margin-top: fluid(70, 35) !important;
+            margin-top: fluid(70, 23.3) !important;
             }
         &__item {
             display: flex;
@@ -290,28 +314,28 @@
             justify-content: end;
             span {
                 white-space: nowrap;
-                margin: 0 fluid(10,5);
+                margin: 0 fluid(10,3.3);
                 align-self: center;
 
             }
             input {
-                width: fluid(396, 188);
+                width: fluid(396, 132);
             }
             select {
                 text-indent: rem(20);
-                width: fluid(224, 112);
-                margin: fluid(12, 6);
+                width: fluid(224, 74.6);
+                margin: fluid(12, 4);
             }
             .dropdown-error-message {
-                bottom: fluid(-90, -45);
+                bottom: fluid(-90, -30);
             }
 
         }      
     }
     #add-spec {
-        @include fluid-text(28, 14);
-        width: fluid(400, 200);
-        height: fluid(52, 26);
+        @include fluid-text(28, 12);
+        width: fluid(400, 150);
+        height: fluid(52, 19.5);
         border-radius: fluid(14, 7);
     }
 }
@@ -530,3 +554,71 @@
     height: fluid(20, 10);
     margin-left: 0;
 }
+
+.city-input-container {
+  position: relative;
+}
+
+.city-suggestions {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  max-height: 200px;
+  overflow-y: auto;
+  z-index: 1000;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.city-suggestions li {
+  padding: fluid(9,3) fluid(12, 4);
+  cursor: pointer;
+  border-bottom: rem(1) solid #eee;
+}
+
+.city-suggestions li:hover {
+  background-color: #f5f5f5;
+}
+
+//стили для автодополнения города
+
+.city-input-container {
+    position: relative;
+
+  }
+  
+  .city-suggestions {
+    position: absolute;
+    color: black;
+    top: 84%;
+    width: fluid(500, 166.6);
+    left: 10px;
+    right: 0;
+    background: var(--color-light-grey);
+    border: 1px solid #ddd;
+    border-radius: fluid(4, 2);
+    max-height: fluid(200, 66.6);
+    overflow-y: auto;
+    z-index: 1000;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    box-shadow: 0 fluid(2,1) fluid(4, 2) rgba(0,0,0,0.1);
+  }
+  
+  .city-suggestions li {
+    @include fluid-text(18,6);
+    padding: fluid(9,3) fluid(12, 4);
+    cursor: pointer;
+    border-bottom: rem(1) solid #eee;
+  }
+  
+  .city-suggestions li:hover {
+    background-color: var(--color-light);
+  }
