--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -5,14 +5,14 @@
         position: relative;
 
         @include flex-center(false, true);
-        width: fluid(600, 300);
-        height: fluid(775, 387.5);
+        width: fluid(600, 200);
+        height: fluid(768, 256);
         background-color: var(--color-dark-blue);
         opacity: 0.8;
-        border-radius: fluid(100, 50) fluid(25, 12.5);
-        box-shadow: 0 0 fluid(15, 7.5) var(--color-orange);
+        border-radius: fluid(100, 33.3) fluid(25, 8.3);
+        box-shadow: 0 0 fluid(15, 5) var(--color-orange);
         &__top {
-            border-radius: fluid(100, 50) fluid(25, 12.5);
+            border-radius: fluid(100, 33.3) fluid(25, 8.3);
             display: flex;
             justify-content: space-around;
             overflow: hidden;
@@ -22,15 +22,15 @@
         }
 
         &__text {
-            margin-bottom: fluid(30,15);
+            margin-bottom: fluid(30,10);
 
             h2 {
                 text-align: center;
-                margin: 0 0 fluid(15, 7.5) 0;
-                letter-spacing: fluid(4, 2);
+                margin: 0 0 fluid(15, 5) 0;
+                letter-spacing: fluid(4, 1.3);
             }
             h3 {
-                margin-bottom: fluid(130,65);
+                margin-bottom: fluid(130,43.3);
             }
             
         }
@@ -38,50 +38,52 @@
             display: flex;
             flex-direction: column;
             
-            margin-bottom: fluid(70, 35);
+            margin-bottom: fluid(70, 23.3);
             button.btn {
+                @include fluid-text(27,9);
                 opacity: 0.8;
                 transition: opacity 0.3s ease;
             }
 
             .input-container {
+                @include fluid-text(27,9);
                 &.valid {
                     .input {
-                      border: 2px solid #4caf4fde;
-                      box-shadow: 0 0 0 1px #4caf4fde;
+                      border: rem(2) solid #4caf4fde;
+                      box-shadow: 0 0 0 rem(1) #4caf4fde;
                     }
                     
                     &::after {
                       content: '✓';
                       position: absolute;
-                      right: 10px;
+                      right: fluid(10, 3.3);
                       top: 50%;
                       transform: translateY(-50%);
                       color: #4caf4fde;
-                      font-size: 16px;
+                      @include fluid-text(15, 5);
                     }
                   }
             }
             span {
-                margin-bottom: fluid(14, 7);
+                margin-bottom: fluid(15, 5);
             }
             #enter_code{
-                margin-bottom: fluid(100, 50);
+                margin-bottom: fluid(100, 33.3);
             }
 
         }
         &__down {
             display: flex;
             justify-content: space-between;
-            margin: fluid(30, 15) fluid(10, 5);
+            margin: fluid(30, 10) fluid(10, 3.3);
             #register-btn {
-                width: fluid(400, 200);
+                width: fluid(400, 133.3);
             }
         }
         &__forget_password_btn {
             display: flex;
             & {
-                width: fluid(550, 275);
+                width: fluid(550, 183.3);
                 margin: 0 ;
             }            
         }
@@ -90,44 +92,43 @@
 
 .form__img-line {
     position: relative;
-    width: fluid(431, 215.5);
-    height: fluid(73.6, 36.8);
+    width: fluid(431, 143.6);
+    height: fluid(73.6, 24.53);
     background-image: url('../assets/orange-line.png');
-    transform: rotate(162deg) translate(fluid(150,75), fluid(50, 25));
+    transform: rotate(162deg) translate(fluid(150,50), fluid(50, 16.6));
 }
 
 .form__img-notebook {
     position: absolute;
-    width: fluid(203, 101.5);
-    height: fluid(147, 73.5);
+    width: fluid(203, 67.6);
+    height: fluid(147, 49);
     background-image: url('../assets/doc.png');
     background-size: contain; // Масштабирует изображение, чтобы оно поместилось в контейнер
     background-repeat: no-repeat; // Отключает повторение изображения
     background-position: center; // Центрирует изображение
-    transform: rotate(3deg) translate(fluid(199, 99.5), fluid(-31, -15.5));
- 
+    transform: rotate(6deg) translate(fluid(199, 67), fluid(-73, -12));
 }
 
 .forget_password, #registration {
     background-color: var(--color-dark-blue);
     color: var(--color-light);
-    @include fluid-text(24, 12);
+    @include fluid-text(24, 8);
 
 }
 
 
 #backBtn {
-    @include fluid-text(30, 15);
+    @include fluid-text(30, 10);
 }
 
 
 #enter_email {
-    margin-bottom: fluid(150, 75);
+    margin-bottom: fluid(150, 50);
 }
 
 #forget_password_form {
-    @include fluid-text(28, 14);
-    span {@include fluid-text(24, 12);}
+    @include fluid-text(27, 9);
+    span {@include fluid-text(24, 8);}
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -135,6 +136,6 @@
     #enter_password {
     }
     #enter_confirmPassword {
-        margin-bottom: fluid(40, 20);
+        margin-bottom: fluid(40, 13.3);
     }
 }
