--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -30,7 +30,7 @@
                 letter-spacing: fluid(4, 1.3);
             }
             h3 {
-                margin-bottom: fluid(130,43.3);
+                margin-bottom: fluid(90, 30);
             }
             
         }
@@ -41,7 +41,7 @@
             margin-bottom: fluid(70, 23.3);
             button.btn {
                 @include fluid-text(27,9);
-                opacity: 0.8;
+             
                 transition: opacity 0.3s ease;
             }
 
