Добавлена загрузка шаблонов на сайт и в базу данных

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,7 +19,7 @@
 
     --font-family-base: 'Cuprum', 'sans-serif';
     --font-family-accent: 'Forum', 'sans-serif';
-
+    --font-family-doc: 'Cambria', 'sans-serif';
     --container-width: #{rem(1400)};
     --container-padding-x: #{rem(16)} ;
 
